New algorithm DetectorEfficiencyCor corrects numbers of counts in a workspace for the efficiency of detectors, which is a function of neutron angle and energy as well as the detectors size and gas pressure. Only basic tests exist so far. Bugs in other algorithms were correct during development refs #841

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -239,6 +239,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\DetectorEfficiencyCor.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\DetectorEfficiencyVariation.cpp"
 				>
 			</File>
@@ -256,6 +260,10 @@
 			</File>
 			<File
 				RelativePath=".\src\Divide.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\EfficiencyScriptInput.cpp"
 				>
 			</File>
 			<File
@@ -593,6 +601,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidAlgorithms\DetectorEfficiencyCor.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\DetectorEfficiencyCorTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAlgorithms\DetectorEfficiencyVariation.h"
 				>
 			</File>
@@ -622,6 +638,10 @@
 			</File>
 			<File
 				RelativePath=".\test\DivideTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\EfficiencyScriptInput.h"
 				>
 			</File>
 			<File
