Mantid can now export data to DAVE. The units of the axes can be set to anything or unset in which case spectra number and unknown are used fixes #855

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -309,6 +309,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\SaveDASC.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\SaveFocusedXYE.cpp"
 				>
 			</File>
@@ -564,6 +568,10 @@
 			</File>
 			<File
 				RelativePath=".\test\SaveCSVTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\SaveDASC.h"
 				>
 			</File>
 			<File
