Give the windows compiler a helping hand so that it can figure things out. Re #862.

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -191,6 +191,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\CheckWorkspacesMatch.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\CommutativeBinaryOperation.cpp"
 				>
 			</File>
