--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -369,6 +369,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidKernel\DocumentationHeader.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidKernel\DynamicFactory.h"
 				>
 			</File>
