Adding derivative of cost function to Fit and Fletcher-Reeves conjugate gradient minimizer. Set property "Minimizer"="Conjugate gradient (Fletcher-Reeves imp.)" to use. Refs #1080.

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -215,6 +215,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\FRConjugateGradientMinimizer.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Gaussian.cpp"
 				>
 			</File>
@@ -318,6 +322,10 @@
 			</File>
 			<File
 				RelativePath=".\test\FitTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidCurveFitting\FRConjugateGradientMinimizer.h"
 				>
 			</File>
 			<File
