--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -86,7 +86,7 @@ if os.name == 'nt':
 		print "* Building for 64bit Windows *"
 		libDirList.append(third_party + '/lib/win64/')
 		libDirList.append('c:/Program Files/Microsoft SDKs/Windows/v6.0A/lib/x64/')
-		libDirList.append('C:/Program Files (x86)/Microsoft Visual Studio 8/VC/lib')
+		libDirList.append('C:/Program Files (x86)/Microsoft Visual Studio 8/VC/lib/amd64')
 		
 	
 	libList.append('python25')
