Added algorithm for loading Muon Nexus version 2 files. re #620

--- a/Code/Mantid/Nexus/Nexus.vcproj
+++ b/Code/Mantid/Nexus/Nexus.vcproj
@@ -194,6 +194,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LoadMuonNexus2.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadNeXus.cpp"
 				>
 			</File>
@@ -265,6 +269,14 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidNexus\LoadMuonNexus.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidNexus\LoadMuonNexus2.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\LoadMuonNexus2Test.h"
 				>
 			</File>
 			<File
