Added UserFunction. re #1087

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -359,6 +359,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\MultiplyRange.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\MuonAsymmetryCalc.cpp"
 				>
 			</File>
@@ -778,6 +782,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\Multiply.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\MultiplyRange.h"
 				>
 			</File>
 			<File
