--- a/Code/Mantid/PythonAPI/PythonAPI.vcproj
+++ b/Code/Mantid/PythonAPI/PythonAPI.vcproj
@@ -54,7 +54,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(SolutionName)API.lib $(SolutionName)DataHandling.lib"
+				AdditionalDependencies="$(SolutionName)Kernel.lib $(SolutionName)Geometry.lib $(SolutionName)API.lib"
 				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).pyd"
 				AdditionalLibraryDirectories="../debug;../../Third_Party/lib/win32;c:\Python25\libs"
 				GenerateDebugInformation="true"
@@ -116,6 +116,7 @@
 				AdditionalIncludeDirectories="inc;../API/inc;../Kernel/inc;../DataHandling/inc;../DataObjects/inc;../Geometry/inc;../../Third_Party/include;C:\python25\include"
 				PreprocessorDefinitions="IN_MANTID_PYTHON_API=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
+				OpenMP="false"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -226,10 +227,6 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidPythonAPI\PythonInterfaceFunctions.h"
-				>
-			</File>
-			<File
-				RelativePath=".\inc\MantidPythonAPI\SimplePythonAPI.h"
 				>
 			</File>
 			<File
