Add an absorption correction algorithm for flat plate sample geometry. Works in the same way as the CylinderAbsorption one (numerical integration). Extracted out the common features of the two absorption correction algorithms into a new base class. Re #1085.

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -179,6 +179,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\src\AbsorptionCorrection.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\BinaryOperation.cpp"
 				>
 			</File>
@@ -220,6 +224,10 @@
 			</File>
 			<File
 				RelativePath=".\src\ConvertUnits.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\CorrectForAttenuation.cpp"
 				>
 			</File>
 			<File
@@ -304,6 +312,10 @@
 			</File>
 			<File
 				RelativePath=".\src\FlatBackground.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\FlatPlateAbsorption.cpp"
 				>
 			</File>
 			<File
@@ -496,6 +508,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\AbsorptionCorrection.h"
+				>
+			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\BinaryOperation.h"
 				>
@@ -706,6 +722,10 @@
 			</File>
 			<File
 				RelativePath=".\test\FlatBackgroundTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\FlatPlateAbsorption.h"
 				>
 			</File>
 			<File
