Add an absorption correction specific to the HRPD 'slab' sample holder. Re #1085.

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -331,6 +331,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\HRPDSlabCanAbsorption.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\InputWSDetectorInfo.cpp"
 				>
 			</File>
