Add a Python algorithm directory along with an example algorithm  to the installer. Re #952

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -20,6 +20,9 @@ instrumentDefinition.directory = ../../../../Test/Instrument
 # Python API so that Mantid scripts can be imported more easily
 pythonscripts.directory = ../../PythonAPI/scripts
 
+# The locations of Python algorithms that are to be loaded at startup
+pythonalgorithms.directories = ../PythonAPI/PythonAlgorithms
+
 # A semi-colon(;) separated list of directories to use to search for data
 # Use forward slash / for all paths
 datasearch.directories = 
