Flip distribution on workspace coming out of NormaliseToMonitor when normalizing by integrated count. Might change to a more generic fix in Divide later. Re #1118.

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -757,6 +757,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidAlgorithms\HRPDSlabCanAbsorption.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAlgorithms\InputWSDetectorInfo.h"
 				>
 			</File>
