Split platform-dependent parts of MemoryManager into separate files. This way it's tidier and all the stuff for a particular platform is together. Re #813.

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -967,6 +967,11 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath=".\src\MemoryManager.cpp_WIN32"
+			FileType="0"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
